--- a/SportLinkup/Localizable.xcstrings
+++ b/SportLinkup/Localizable.xcstrings
@@ -4,6 +4,22 @@
     "" : {
 
     },
+    " The owner does not provide a list of Personal Data types collected.\n Complete details on each type of Personal Data collected are provided in the dedicated sections of\n this privacy policy or by specific explanation texts displayed prior to the Data collection.\n Personal Data may be freely provided by the User, or, in case of Usage Data, collected automatically\n when using this Application.\n Unless specified otherwise, all Data requested by this Application is mandatory and failure to\n provide this Data may make it impossible for this Application to provide its services.\n In cases where this Application specifically states that some Data is not mandatory, Users are free\n not to communicate this Data without consequences to the availability or the functioning of the Service.\n Users who are uncertain about which Personal Data is mandatory are welcome to contact the Owner.\n Any use of Cookies – or of other tracking tools — by this Application or by the owners of third-party\n services used by this Application serves the purpose of providing the Service required by the User, in\n addition to any other purposes described in the present document and in the Cookie Policy.\n Users are responsible for any third-party Personal Data obtained, published or shared through this Application." : {
+
+    },
+    "%@" : {
+
+    },
+    "%@ %@" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$@ %2$@"
+          }
+        }
+      }
+    },
     "%lld" : {
 
     },
@@ -46,6 +62,24 @@
         }
       }
     },
+    "Booking" : {
+
+    },
+    "Booking Date:%@" : {
+
+    },
+    "Booking ID: %@" : {
+
+    },
+    "Booking summary" : {
+
+    },
+    "Booking Time:%@" : {
+
+    },
+    "Cancel" : {
+
+    },
     "Card Number" : {
       "localizations" : {
         "en" : {
@@ -67,6 +101,7 @@
       }
     },
     "Conditions of Uses" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -90,6 +125,7 @@
 
     },
     "Cycling" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -108,6 +144,9 @@
           }
         }
       }
+    },
+    "Date" : {
+
     },
     "Date of brith" : {
       "localizations" : {
@@ -210,6 +249,7 @@
       }
     },
     "Hello, world!" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -220,6 +260,7 @@
       }
     },
     "Hello, World!" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -239,10 +280,7 @@
         }
       }
     },
-    "It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like)." : {
-
-    },
-    "Last update 10/12/2023" : {
+    "Last update 31/12/2023" : {
 
     },
     "Latitude: %lf\nLongitude: %lf" : {
@@ -338,6 +376,9 @@
         }
       }
     },
+    "Payment Received Successfully" : {
+
+    },
     "Players" : {
       "localizations" : {
         "en" : {
@@ -348,6 +389,9 @@
         }
       }
     },
+    "Players:%lld" : {
+
+    },
     "Please read these terms of service, carefully before using our app operated by us." : {
       "localizations" : {
         "en" : {
@@ -357,6 +401,12 @@
           }
         }
       }
+    },
+    "Privacy Policy" : {
+
+    },
+    "Privacy Policy of SportLinkupApp" : {
+
     },
     "Private" : {
       "localizations" : {
@@ -397,6 +447,9 @@
           }
         }
       }
+    },
+    "See Activity" : {
+
     },
     "See Location" : {
       "localizations" : {
@@ -459,6 +512,7 @@
       }
     },
     "Terms & Conditions" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -477,6 +531,9 @@
           }
         }
       }
+    },
+    "Total Price:%@" : {
+
     },
     "Update" : {
       "localizations" : {
